General updates to restore SBF functions